# vpkml64

./: .gitignore  LICENSE  Makefile  README.md  dune-project  vpkml64.bat  vpkml64.opam
res/: credits  title
src/: config.ml  dune  main.ml  vpkml64.ml
src/builder/: assets.ml  builder.ml  collector.ml  game.ml
src/commands/: cmd.ml  cmd_build.ml  cmd_credits.ml  cmd_scrap.ml  cmd_update_list.ml  cmd_update_medias.ml
src/database/: database.ml  dbGamesdb.ml  dbHfsdb.ml  repository.ml
src/format/: json.ml
src/scrapping/: crawler.ml  scrapper.ml  wrapper.ml
src/terminal/: display.ml  input.c  input.ml  menu.ml  output.ml  progress.ml  terminal.c  terminal_width.ml
src/utils/: checker.ml  standardizer.ml  sysUtils.ml
