(copy_files# format/*)
(copy_files# scrapping/*)
(copy_files# database/*)
(copy_files# commands/*)
(copy_files# terminal/*)
(copy_files# builder/*)
(copy_files# utils/*)

(executable
 (public_name vpkml64)
 (name main)
 (foreign_stubs
  (language c)
  (names terminal input))
 (libraries vpkml64 cohttp cohttp-lwt-unix lwt lambdasoup re str yojson lwt.unix lwt_ppx uri)
 (preprocess (pps lwt_ppx)))
(env
  (dev
    ; (flags (:standard -warn-error -26-27-32-33-35)
    ))